fix(Views):Adjust scoped css

--- a/dtc_server/templates/index.html
+++ b/dtc_server/templates/index.html
@@ -5,14 +5,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Driving Test Conqueror</title>
 </head>
 
 <body>
     <!-- This part is in the screenshot at the bottom! -->
-    <h1>Vue JS</h1>
     <div id="app"></div>
     {% render_bundle 'app' %}
 </body>
 
 </html>
+
+<style>
+    body {
+      font-family: "Lora", sans-serif;
+      margin: 0;
+    }
+  </style>
