--- a/dtc_server/templates/index.html
+++ b/dtc_server/templates/index.html
@@ -3,24 +3,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Driving Test Conqueror</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Driving Test Conqueror</title>
 </head>
 
 <body>
-    <!-- This part is in the screenshot at the bottom! -->
-    <div id="app"></div>
-    {% render_bundle 'app' %}
+  <!-- This part is in the screenshot at the bottom! -->
+  <div id="app"></div>
+  {% render_bundle 'app' %}
 </body>
 
 </html>
 
 <style>
-    body {
-      font-family: "Lora", sans-serif;
-      margin: 0;
-    }
-  </style>
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
+
+  body {
+    font-family: "Lora", sans-serif;
+    margin: 0;
+  }
+</style>
